fix: icon visibility animation

--- a/packages/gatsby-theme-carbon/src/components/Utils/Utils.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/Utils/Utils.module.scss
@@ -3,8 +3,9 @@
     $theme: $carbon--theme--g90,
     $emit-custom-properties: true
   );
-  transition: opacity $duration--fast-02 motion(standard, productive),
-    visibility $duration--fast-02;
+  transition-duration: $duration--fast-02;
+  transition-timing-function: motion(standard, productive);
+  transition-property: opacity;
   opacity: 1;
   visibility: visible;
 }
@@ -20,6 +21,5 @@
 .container.hidden {
   opacity: 0;
   visibility: hidden;
-  transition: opacity $duration--fast-02 motion(standard, productive),
-    visibility $duration--fast-02;
+  transition-property: opacity, visibility;
 }
